@@ -1,6 +1,7 @@
 Changes for 1.4.7:
 
- - [DEV-198] improved displaying of disabled items in the maps (sasha)
+ - [ZBX-432] set trigger value to unknown if changed item status (Sahsa)
+ - [DEV-198] improved displaying of disabled items in the maps (Sasha)
  - [ZBX-430] improved configuration scripts (Sasha)
  - [ZBX-103] fixed escaping in sql queries (Sasha)
  - [ZBX-424] fixed possible server crash while importing XML (Sasha)
